bad/assign_binop_ceq_class_side.example_compiler_output
ERROR
[1mbad/assign_binop_ceq_class_side.lat:9:9: [1;31merror: [0;1mleft side is not assignable[m
	x == y = new Z;
	       [1;32m^[m
[1mbad/assign_binop_ceq_class_side.lat:9:2: [1;34mnote: [0;1mleft side starts here[m
	x == y = new Z;
	[1;32m^[m
